--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # images
-*.jpg
-*.jpeg
+train/*/*.jpg
+train/*/*.jpeg
+test/*/*.jpg
+test/*/*.jpeg
 train/*/*.png
 test/*/*.png
+tmp/*.jpg
+tmp/*.jpeg
+tmp/*.png
 
 # models
 *.h5
